Feature / Metadata batch writes update (#377)
* Update the metadata API (public and trusted) with new semantics and object types. Also update doc comments for API methods and request / response types.

* Update validators for metadata API (both public and trusted)

* Refactoring fixes in metadata write service

* Factor out some common and unused code

* Factor out some common and unused code

* Factor out some common and unused code

* Update signatures in metadata API classes

* Clean up metadata write service

* Update metadata DAL interface for batch operations

* One fix in metadata API impl for new write service

* Refactor JDBC metadata DAL to match updated API

* First pass on refactoring JDBC metadata DAL

* Update orchestrator after writeBatch() refactor

* Fix compile errors in existing metadata unit tests

* Fix uniqueness check for batch writes in metadata API validator

* Update logging intercept for the case where a stack trace is not available

* Improve error mapping in error mapping interceptor

* Update client logging intercept for the case where a stack trace is not available

* Fix in metadata API impl

* Latest JDBC errors work

* Update error handling for JDBC metadata DAL

* Update API doc comments for writeBatch()

* Remove DAL write operation classes

* Avoid unnecessary DAL calls in metadata write service

* Logging for DAL batch update object

* Review TODOs in metadata write service

* Update error messages for JDBC metadata DAL

* Better error reporting for DAL updates when prior version / tag not found

* Remove one legacy DAL API method

* Update API overloads in the DAL interface

* Bump protobuf and gRPC versions for compliance

* Standard naming for contents of write batch request (line up with methods in metadata API)

* Update code to match metadata API naming update

* Update proto/grpc dependencies - choose latest working version

* Do not pull in the JavaX ann